# CIS-1902-Final-Project

./: README.md  button.py  example.py  game.py  game_state_manager.py  main.py  pyproject.toml  renderer.py  screens.py
2048-project-py3.12/: game.py  game_state_manager.py  main.py  pyproject.toml  renderer.py  screens.py
2048-project-py3.12/backend/: 2048_game.db  main.py
backend/: main.py
